--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 haniffa21.processed.h5ad
 pytorch.venv
 
-./simpleGNN_impute/data*
-./simpleGNN_impute/figures*
+simpleGNN_impute/data/*
+simpleGNN_impute/figures/*
